test/fail/insert-t-invalid.rnp
#X, invalid#;
---
 --> fail/insert-t-invalid.rnp:1:1
  |
1 | #X, invalid#;
  | ^^^^^^^^^^^^ invalid is not a valid type
  |
